--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,12 @@
 
 
 /* Main Container */
-#main-container {
+.container-row {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  
 }
 
 
@@ -15,6 +19,24 @@
 #preview-screen {
   height: 100vh;
   width: 50vw;
-  background-color: red;
   overflow: hidden;
+  border-left: 1px solid black;
+
 }
+
+#preview-header {
+  height: 80px;
+  width: 100%;
+  margin: 1rem;
+  border: black 2px solid;
+}
+
+#main-title {
+  margin-left: 2rem;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  align-items: center;
+  font-size: 40px;
+}
+
