--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,16 @@
   
 }
 
+.container-col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.container-col > div {
+  width: 100%;
+}
+
 
 /* Preview Screen */
 #preview-screen {
@@ -21,13 +31,19 @@
   width: 50vw;
   overflow: hidden;
   border-left: 1px solid black;
+}
 
+#preview-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+  height: 100%;
 }
 
 #preview-header {
   height: 80px;
   width: 100%;
-  margin: 1rem;
   border: black 2px solid;
 }
 
@@ -40,3 +56,12 @@
   font-size: 40px;
 }
 
+/* General Information */
+#preview-general-information{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: red;
+  width: 100%;
+}
