--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,18 @@
   box-sizing: border-box;
 }
 
+/* Global Variables */
+:root {
+  --main-font: 'Roboto', sans-serif;
+  --primary-color: #538eed;
+  --secondary-color: #313033;
+}
+
+/* Global classes */
+.font-color {
+  color: var(--primary-color);
+}
+
 
 /* Main Container */
 .container-row {
@@ -33,35 +45,37 @@
   border-left: 1px solid black;
 }
 
+/* Preview Container */
 #preview-container {
+  padding: 1rem;
+  height: 100%;
+  font-family: var(--main-font);
+}
+
+/* Preview Sidebar */
+#preview-sidebar {
+  width: fit-content;
+  border: black 1px solid;
+  height: 100%;
+  padding: 1rem 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 90%;
-  height: 100%;
+  justify-content: space-between;
 }
 
-#preview-header {
-  height: 80px;
-  width: 100%;
-  border: black 2px solid;
+
+
+#preview-general > div {
+  margin-top: 1rem;
 }
 
-#main-title {
-  margin-left: 2rem;
-  display: flex;
-  flex-direction: row;
-  height: 100%;
-  align-items: center;
+#preview-general > .prof-designation {
+  text-align: left;
+}
+
+/* Preview General */
+#preview-general > .name {
   font-size: 40px;
-}
-
-/* General Information */
-#preview-general-information{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  background-color: red;
-  width: 100%;
+  font-family: 'Roboto', sans-serif;
 }
