--- a/src/index.css
+++ b/src/index.css
@@ -51,11 +51,14 @@
   height: 100%;
   font-family: var(--main-font);
   color: var(--secondary-color);
+  width: 100%;
 }
+
+
 
 /* Preview Sidebar */
 #preview-sidebar {
-  width: fit-content;
+  width: 20rem;
   border: black 1px solid;
   height: 100%;
   padding: 1rem 0.5rem;
@@ -94,3 +97,33 @@
 
 
 /* Techincal Skills */
+#preview-skills {
+  width: 100%;
+}
+.preview-sidebar-heading {
+  text-align: left;
+  font-size: 2rem;
+  border-bottom: 1px solid var(--secondary-color);
+  line-height: 0.1rem;
+}
+
+.preview-sidebar-heading > span {
+  background-color: #fff;
+}
+
+#skills {
+  margin-top: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#skills > .skill {
+  border: 2px solid var(--secondary-color);
+  display: inline;
+  padding: 0.25rem;
+  border-radius: 5px;
+  background-color: var(--primary-color);
+  color: #fff;
+  margin: 0 0.5rem 0.5rem 0;
+}
