--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+ul {
+  padding-left: 0;
+}
+
 /* Global Variables */
 :root {
   --main-font: 'Roboto', sans-serif;
@@ -187,3 +191,30 @@
   text-align: justify;
 }
 
+.grid-display {
+  display: grid;
+  grid-template-columns: 1fr 4fr 3fr;
+  column-gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.preview-description {
+  grid-column-start: 2;
+  grid-column-end: 4;
+}
+
+.preview-small-heading {
+  font-weight: 800;
+}
+
+.preview-company {
+  font-size: 0.8rem;
+  text-align: right;
+}
+
+/* Project Experience */
+#preview-project-experience {
+  text-align: left;
+  width: 100%;
+  text-align: justify;
+}
