In the last commit icons were added to the add and delete elements. This caused an issue as the callback function was using e.target.className which means that if the user clicks on the icon within the div where the event handler was attached, the className of the icon may not match the criteria outlined in the respective props. To combat this e.currentTarget.className was used, which gets the element that the event listner is attached to.

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ ul {
   --font-size-preview-sidebar: 14px;
   --delete-button-color: #d11406;
   --delete-button-color-hover: #c91002;
+  --add-buttton-color: #5cbd02;
 }
 
 /* Global classes */
@@ -121,7 +122,6 @@ textarea {
   height: 2rem;
   color: #fff;
   font-size: 1.2rem;
-  margin: auto 0;
 }
 
 .delete-btn-large:hover {
@@ -130,6 +130,20 @@ textarea {
   background-color: var(--delete-button-color-hover);
 }
 
+
+.add-btn-large {
+  width: 100%;
+  background-color: var(--add-buttton-color);
+  border-radius: 5px;
+  height: 2rem;
+  color: #fff;
+  font-size: 1.2rem;
+}
+
+.add-btn-large:hover {
+  font-size: 1.5rem;
+  cursor: pointer;
+}
 
 /* Preview Screen */
 #preview-screen {
