--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@ body {
 
 .background{
   width: 100vw;
-  background-color: #fff;
+  background-color: #c6c8cc;
   padding-top: 2rem;
 }
 
@@ -86,6 +86,13 @@ body {
   box-shadow: 2px 2px var(--secondary-color);
   width: 100%;
   padding: 1rem;
+  margin-right: 4rem;
+}
+
+::placeholder {
+  color: #fff;
+  opacity: 0.6;
+  font-size: 16px;
 }
 
 input {
@@ -93,7 +100,10 @@ input {
   border-radius: 5px;
   margin-bottom: 0.5rem;
   height: 2rem;
-
+  font-family: var(--main-font);
+  font-size: 16px;
+  background-color: var(--secondary-color);
+  color: #fff;
 }
 
 textarea {
@@ -101,13 +111,17 @@ textarea {
   width: 100%;
   border-radius: 5px;
   margin-bottom: 0.5rem;
-  height: 4rem;
+  height:6rem;
+  font-family: var(--main-font);
+  font-size: 16px;
+  background-color: var(--secondary-color);
+  color: #fff;
 }
 
 .enter-information-heading {
   margin-bottom: 0.5rem;
   font-size: 1.5rem;
-  color: var(--secondary-color);
+  color: var(--primary-color);
   font-family: var(--main-font);
 }
 
@@ -122,6 +136,7 @@ textarea {
   height: 2rem;
   color: #fff;
   font-size: 1.2rem;
+  margin-bottom: 1rem;
 }
 
 .delete-btn-large:hover {
@@ -145,11 +160,70 @@ textarea {
   cursor: pointer;
 }
 
+.description-style {
+  display: flex;
+  flex-direction: row;
+
+}
+
+.description-style > button {
+  width: 2rem;
+  height: 2rem;
+  border: none;
+  color: var(--delete-button-color);
+  cursor: pointer;
+}
+
+
+.educationInformation > div, .workInformation > div, .projectInformation > div, #general-information > div, #technical-skills {
+  border: var(--secondary-color) 2px solid;
+  border-radius: 10px;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+div > .description-style {
+  border: none;
+  padding: 0 0 0 0.5rem;
+  margin-bottom: 0;
+}
+
+.add-btn-small {
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: var(--add-buttton-color);
+  float: right;
+  margin-bottom: 1rem;
+}
+
+#added-skills {
+  clear: both;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1rem;
+}  
+
+#added-skills > .skill > button {
+  margin-left: 0.5rem;
+  background: none;
+  border: none;
+  color: var(--delete-button-color);
+  cursor: pointer;
+}
+
+.reset-btn {
+  width: 100%;
+  background-color: rgb(211, 218, 14);
+  border-radius: 5px;
+  height: 2rem;
+  color: #fff;
+  font-size: 1.2rem;
+}
+
 /* Preview Screen */
 #preview-screen {
-  /* height: 100vh;
-  width: 50vw; */
-  /* overflow: hidden; */
   position: sticky;
   top: 0;
 }
@@ -230,7 +304,7 @@ textarea {
   flex-wrap: wrap;
 }
 
-#skills > .skill {
+.skill {
   border: 2px solid var(--secondary-color);
   display: inline;
   padding: 0.25rem;
