--- a/src/index.css
+++ b/src/index.css
@@ -175,7 +175,7 @@ textarea {
 }
 
 
-.educationInformation > div, .workInformation > div, .projectInformation > div, #general-information > div, #technical-skills {
+.educationInformation > div, .workInformation > div, .projectInformation > div, #general-information > div, #technical-skills, .objectiveInformation {
   border: var(--secondary-color) 2px solid;
   border-radius: 10px;
   padding: 0.5rem;
@@ -214,12 +214,18 @@ div > .description-style {
 }
 
 .reset-btn {
+  margin-top: 1rem;
   width: 100%;
   background-color: rgb(211, 218, 14);
   border-radius: 5px;
   height: 2rem;
   color: #fff;
   font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.reset-btn:hover {
+  font-size: 1.5rem;
 }
 
 /* Preview Screen */
