--- a/src/index.css
+++ b/src/index.css
@@ -82,10 +82,7 @@ body {
 /* INFORMATION ENTER SCREEN */
 
 #information-enter-screen {
-  /* border: var(--primary-color) 2px solid; */
-  /* border-radius: 5px; */
   background-color: var(--preview-sidebar-background-color);
-  /* box-shadow: 2px 2px var(--secondary-color); */
   width: 100%;
   padding: 1rem;
   margin-right: 1rem;
@@ -524,9 +521,11 @@ div > .description-style {
   }
 
   #information-enter-screen {
-    margin-right: 0;
+    /* margin-right: 0;
     max-width: 100vw;
     overflow: hidden;
+     */
+     text-align: center;
   }
 
   .hide {
